--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -21,7 +21,7 @@
 </div>-->
 <p-toolbar>
     <div class="ui-toolbar-group-right">
-        <button pButton type="button" label="New" icon="pi pi-plus" (click)="afficherLaSaisie(event)"></button>
+        <button pButton type="button" label="New" icon="pi pi-plus" (click)="afficherLaSaisie()"></button>
         <!--<p-button pButton type="button" label="New" icon="pi pi-plus" (onClick)="afficherLaSaisie($event)"></p-button>-->
         <!--<button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>-->
         <!--<i class="pi pi-bars"></i>-->
@@ -70,125 +70,139 @@
 
 <p-dialog header="New Collaborateur" [(visible)]="displayDialog" [responsive]="true" [modal]="true">
 
-    <p-toolbar>
-        <div class="ui-toolbar-group-right">
-            <div class="csv-file-chooser-section">
 
-                <input type="file" #fileImportInput name="File Upload" id="txtFileUpload"
-                       (change)="fileChangeListener($event)" accept=".csv"/>
+    <p-tabView>
+        <p-tabPanel header="création" leftIcon="pi pi-calendar">
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">id_pilot</span>
+                        <input type="text" pInputText placeholder="identifiant pilot">
+                    </div>
+                </div>
 
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">nom</span>
+                        <input type="text" pInputText placeholder="nom">
+                    </div>
+                </div>
+
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">prenom</span>
+                        <input type="text" pInputText placeholder="prenom">
+                    </div>
+                </div>
             </div>
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">trig_open</span>
+                        <input type="text" pInputText placeholder="trigramme open">
+                    </div>
+                </div>
 
-            <div class="csv-result-table">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">tel_p</span>
+                        <input type="text" pInputText placeholder="telephone personnel">
+                    </div>
+                </div>
 
-
-                <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true" columnResizeMode="expand"
-                         [responsive]="true" #tt [columns]="cols" [value]="csvRecords" [paginator]="true" [rows]="10">
-
-
-                    <ng-template pTemplate="header" let-columns>
-                        <tr>
-                            <th *ngFor="let col of cols">
-                                {{col.header}}
-                            </th>
-                        </tr>
-
-                    </ng-template>
-                    <ng-template pTemplate="body" let-rowData let-columns="columns">
-                        <tr [pSelectableRow]="rowData">
-
-                            <td *ngFor="let col of columns">
-                                {{rowData[col.field]}}
-                            </td>
-                        </tr>
-
-                    </ng-template>
-                </p-table>
-
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">mail_op</span>
+                        <input type="text" pInputText placeholder="mail open">
+                    </div>
+                </div>
             </div>
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">mail_sg</span>
+                        <input type="text" pInputText placeholder="mail sociéte générale">
+                    </div>
+                </div>
 
-        </div>
-    </p-toolbar>
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">code_cat</span>
+                        <input type="text" pInputText placeholder="categorisation">
+                    </div>
+                </div>
 
-    <div class="ui-g ui-fluid">
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">id_pilot</span>
-                <input type="text" pInputText placeholder="identifiant pilot">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">top_sta</span>
+                        <input type="text" pInputText placeholder="top statut">
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="ui-g ui-fluid">
+                <div class="ui-g-12 ui-md-4">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon">statut</span>
+                        <input type="text" pInputText placeholder="statut">
+                    </div>
+                </div>
+            </div>
+            <p-footer>
+                <div class="ui-dialog-buttonpane ui-helper-clearfix">
+                    <button pButton type="button" label="Créer les collaborateurs" icon="pi pi-upload"
+                            class="ui-button-success"
+                            (click)="saveNewCollaborateur()"></button>
+                </div>
+            </p-footer>
+        </p-tabPanel>
+        <p-tabPanel header="Importer" leftIcon="pi pi-inbox">
 
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">nom</span>
-                <input type="text" pInputText placeholder="nom">
-            </div>
-        </div>
 
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">prenom</span>
-                <input type="text" pInputText placeholder="prenom">
-            </div>
-        </div>
-    </div>
-    <div class="ui-g ui-fluid">
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">trig_open</span>
-                <input type="text" pInputText placeholder="trigramme open">
-            </div>
-        </div>
+            <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
+                     columnResizeMode="expand"
+                     [responsive]="true" #tt [columns]="cols" [value]="csvRecords" [paginator]="true"
+                     [rows]="10">
 
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">tel_p</span>
-                <input type="text" pInputText placeholder="telephone personnel">
-            </div>
-        </div>
 
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">mail_op</span>
-                <input type="text" pInputText placeholder="mail open">
-            </div>
-        </div>
-    </div>
-    <div class="ui-g ui-fluid">
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">mail_sg</span>
-                <input type="text" pInputText placeholder="mail sociéte générale">
-            </div>
-        </div>
+                <ng-template pTemplate="header" let-columns>
+                    <tr>
+                        <th *ngFor="let col of cols">
+                            {{col.header}}
+                        </th>
+                    </tr>
 
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">code_cat</span>
-                <input type="text" pInputText placeholder="categorisation">
-            </div>
-        </div>
+                </ng-template>
+                <ng-template pTemplate="body" let-rowData let-columns="columns">
+                    <tr [pSelectableRow]="rowData">
 
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">top_sta</span>
-                <input type="text" pInputText placeholder="top statut">
-            </div>
-        </div>
-    </div>
-    <div class="ui-g ui-fluid">
-        <div class="ui-g-12 ui-md-4">
-            <div class="ui-inputgroup">
-                <span class="ui-inputgroup-addon">statut</span>
-                <input type="text" pInputText placeholder="statut">
-            </div>
-        </div>
-    </div>
-    <p-footer>
-        <div class="ui-dialog-buttonpane ui-helper-clearfix">
-            <button pButton type="button" label="Save" icon="pi pi-upload" class="ui-button-success"
-                    (click)="saveNewCollaborateur(event)"></button>
-        </div>
-    </p-footer>
+                        <td *ngFor="let col of columns">
+                            {{rowData[col.field]}}
+                        </td>
+                    </tr>
+
+                </ng-template>
+            </p-table>
+            <p-footer>
+                <div class="ui-dialog-buttonpane ui-helper-clearfix">
+                    <button pButton type="button" label="Créer les collaborateurs" icon="pi pi-upload"
+                            class="ui-button-success" (click)="saveNewCollaborateur()"></button>
+
+
+                    <input type="file" #fileImportInput name="File Upload" id="txtFileUpload2" (change)="fileChangeListener($event)"
+                           accept=".csv"/>
+
+
+
+                    <p-fileUpload #fubauto #fileImportInput mode="basic"   accept=".csv" customUpload="true" (uploadHandler)="fileChangeListener($event)"
+                                  auto="true" chooseLabel="Importer les collaborateurs"></p-fileUpload>
+
+
+                </div>
+            </p-footer>
+
+        </p-tabPanel>
+
+    </p-tabView>
+
 
 </p-dialog>
