--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -7,7 +7,7 @@
 
             <div class="ui-g-6 ui-g-nopad">
                 <div class="ui-g-12">
-                    <label for="username">Username</label>
+                    <label >Username</label>
                 </div>
                 <div class="ui-g-12">
 
@@ -20,7 +20,7 @@
 
 
                 <div class="ui-g-12">
-                    <label for="password">Password</label>
+                    <label >Password</label>
                 </div>
                 <div class="ui-g-12">
                     <input pPassword type="password" formControlName="password" class="form-control"
